--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div class="sidebar"  style = "text-align: center;">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
