--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
-    <div class="sidebar-about">
+    <div class="sidebar-about" style = "text-align: center;">
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
