--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -82,7 +82,9 @@ html {
   font-family: "Abril Fatface", serif;
   font-size: 3.25rem;
 }
-
+.sidebar-about {
+  padding-bottom: 200px;
+}
 /* Sidebar nav */
 .sidebar-nav {
   margin-bottom: 1rem;
