--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
-    <div class="sidebar-about" style = "text-align: center; padding-bottom: 200px;">
+    <div class="sidebar-about" style = "text-align: center;">
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
@@ -9,7 +9,7 @@
       <p class="lead">{{ site.description }}</p>
     </div>
 
-    <nav class="sidebar-nav">
+    <nav class="sidebar-nav" style = "padding-bottom: 200px;">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
       {% comment %}
@@ -26,7 +26,7 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub Project</a>
     </nav>
 
     <p>Hyde &copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
