--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
 
     <nav class="sidebar-nav" style = "padding-bottom: 200px;">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.aboutPage }}">About Me</a>
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="about.html">About Me</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
