--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,8 +11,7 @@
 
     <nav class="sidebar-nav" style = "padding-bottom: 200px;">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="about.html">About Me</a>
-
+<a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ /about/ }}">About Me</a>
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
         `layout: page` in the front-matter. See readme for usage.
@@ -22,7 +21,7 @@
       {% for node in pages_list %}
         {% if node.title != null %}
           {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+            <!--<a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>-->
           {% endif %}
         {% endif %}
       {% endfor %}
